logs/caliendo.log
Listing '.'...
Listing './bin'...
Compiling './bin/get_objgraph.py'...
Compiling './bin/unpickle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/caliendo'...
Listing './lib/python3.5/site-packages/caliendo/db'...
Listing './lib/python3.5/site-packages/caliendo-2.1.10.egg-info'...
Listing './lib/python3.5/site-packages/dill'...
Listing './lib/python3.5/site-packages/dill-0.2b1.egg-info'...
Listing './lib/python3.5/site-packages/mock-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/api'...
Listing './lib/python3.5/site-packages/test/api/services'...
Compiling './lib/python3.5/site-packages/test/caliendo_test.py'...
***   File "./lib/python3.5/site-packages/test/caliendo_test.py", line 171
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/nested'...
Listing './share'...
Listing './share/python-wheels'...
